--- a/style.css
+++ b/style.css
@@ -24,6 +24,16 @@
     --box-shadow: 0 2rem 3rem var(--color-light);
 }
 
+/* ================= DARK THEME VARIABLES ==================== */
+    .dark-theme-variables {
+        --color-background: #181a1e;
+        --color-white: #202528;
+        --color-dark: #edeffd;
+        --color-dark-variant: #a3bdcc;
+        --color-light: rgba(0,0,0,0.4);
+        --box-shadow: 0 2rem 3rem var(--color-light);
+
+    }
 * {
     margin: 0;
     padding: 0;
@@ -582,6 +592,14 @@ main .recent-orders a {
         height: 100vh;
         padding-right: var(--card-padding);
         display: none;
+        left: -100%;
+        animation: showMenu 400ms ease forwards;
+    }
+
+    @keyframes showMenu {
+        to{
+            left: 0;
+        }
     }
 
     aside .logo {
